--- a/k8s/k8s.yaml
+++ b/k8s/k8s.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,7 +17,6 @@ spec:
         image: backend:latest
         ports:
         - containerPort: 8000
-
 ---
 apiVersion: v1
 kind: Service
@@ -32,7 +30,6 @@ spec:
   - port: 8000
     targetPort: 8000
     nodePort: 30007
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -53,7 +50,6 @@ spec:
         image: frontend:latest
         ports:
         - containerPort: 80
-
 ---
 apiVersion: v1
 kind: Service
@@ -67,7 +63,6 @@ spec:
   - port: 80
     targetPort: 80
     nodePort: 30080
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -85,11 +80,10 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: postgres:16-alpine
-        env:
-        - name: POSTGRES_PASSWORD
-          value: secret
-
+        image: postgres:17
+      env:
+      - name: POSTGRES_PASSWORD
+        value: postgres
 ---
 apiVersion: v1
 kind: Service
