--- a/k8s/k8s.yaml
+++ b/k8s/k8s.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -85,10 +84,14 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: postgres:16-alpine
+        image: postgres:17
         env:
+        - name: POSTGRES_USER
+          value: postgres
         - name: POSTGRES_PASSWORD
-          value: secret
+          value: postgres
+        - name: POSTGRES_DB
+          value: app
 
 ---
 apiVersion: v1
