--- a/.env.test
+++ b/.env.test
@@ -27,9 +27,9 @@ SMTP_PORT=587
 # Postgres (оставляем, т.к. они обязательны в Settings, но переопределены выше)
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
-POSTGRES_DB=postgres
+POSTGRES_DB=app
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=adminpassword
 SENTRY_DSN=
 DOCKER_IMAGE_BACKEND=backend
 DOCKER_IMAGE_FRONTEND=frontend
