--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,10 +38,19 @@ jobs:
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 🏗️ Build Backend Docker image
+      - name: 🔐 Login to Docker Hub
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: 🏗️ Build and Push Backend Docker image
         uses: docker/build-push-action@v5
         with:
           context: . 
-          file: ./backend/Dockerfile # Используем файл, который вы создадите ниже
-          push: false 
-          tags: ${{ github.repository }}/backend:latest
+          file: ./backend/Dockerfile
+          push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/devops-backend:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/devops-backend:${{ github.sha }}
